# pp-p

./: .gitmodules  README.md  graphics_clion_prefix.txt
chapter-1/: CMakeLists.txt  main.cpp
chapter-11/: CMakeLists.txt  README.md  circle_example.cpp  ellipses.cpp  image_example.cpp  line_example.cpp  lines_example.cpp  lines_grid.cpp  main.cpp  mark_example.cpp  rectangle_color_palette.cpp  rectangle_example.cpp
chapter-12/: CMakeLists.txt  main.cpp
chapter-12/PPP/: Box.h  Colormap.cpp  Graph.h  Window.h
chapter-12/exercises/definitions/: Frowny.cpp  Frowny.h  Immobile_circle.cpp  Immobile_circle.h  Octagon.cpp  Octagon.h  Rounded.cpp  Rounded.h  Smiley.cpp  Smiley.h  Striped_circle.cpp  Striped_circle.h  Striped_rectangle.cpp  Striped_rectangle.h
chapter-12/exercises/drill/: B1.cpp  B1.h  drill_code.cpp
chapter-12/exercises/src/: ex_1.cpp  ex_4.cpp
chapter-2/: CMakeLists.txt  exercise_10.cpp  exercise_6.cpp  implicit_conversions.cpp  letter.cpp  main.cpp  name_and_age.cpp  repeating_words.cpp
chapter-3/: CMakeLists.txt  alphabet_for.cpp  bleep_words.cpp  converter  converter_if.cpp  converter_switch  converter_switch.cpp  drill  drill.cpp  drill.h  drill_units  drill_units.cpp  exercise_18.cpp  exercise_19.cpp  exercise_20.cpp  rock_paper_sci  rock_paper_sci.cpp  temps.cpp  while_loop.cpp
chapter-4/: CMakeLists.txt  ex_11  exercise_11.cpp  main  main.cpp
chapter-5/: CMakeLists.txt  calc00.cpp  calc02  calc02.cpp  calc_buggy  calc_buggy.cpp  calc_v1.cpp  ex4  ex4.cpp  ex7  ex7.cpp  my_calc  my_calc.cpp  std_lib_facilities.h  test  test.cpp
(+138 files in other folders)
